# base_location

./: README.en.md  README.md  bundle.json  config.gni
framework/native/: BUILD.gn
frameworks/base_module/: BUILD.gn
frameworks/base_module/source/: location.cpp  location_sa_load_manager.cpp  request_config.cpp  satellite_status.cpp
frameworks/cj/: BUILD.gn
frameworks/cj/include/: cached_locations_callback.h  country_code_callback.h  geolocationmanager_ffi.h  geolocationmanager_impl.h  geolocationmanager_utils.h  gnss_status_callback.h  location_error_callback.h  location_switch_callback.h  locator_callback.h  nmea_message_callback.h
frameworks/cj/source/: cached_locations_callback.cpp  country_code_callback.cpp  geolocationmanager_ffi.cpp  geolocationmanager_impl.cpp  geolocationmanager_utils.cpp  gnss_status_callback.cpp  location_error_callback.cpp  location_switch_callback.cpp  locator_callback.cpp  nmea_message_callback.cpp
frameworks/js/napi/: BUILD.gn
frameworks/location_ani/: BUILD.gn  location_ani_config.json
frameworks/location_ani/ets/: @ohos.geoLocationManager.ets  location_ani.ets
frameworks/location_ani/include/: locator_callback_ani.h
frameworks/location_ani/src/: ani_constructor.cpp  locator_callback_ani.cpp
frameworks/location_common/common/: BUILD.gn  liblbsservice_common_version_script.txt
frameworks/native/: BUILD.gn
frameworks/native/fence_extension_ability/: BUILD.gn  libfence_extension_ability_version_script.txt
frameworks/native/geofence_sdk/: BUILD.gn  libgeofence_sdk_version_script.txt
frameworks/native/location_ndk/: BUILD.gn  liblocation.ndk.json
frameworks/native/locator_agent/: BUILD.gn
frameworks/native/locator_sdk/: BUILD.gn  ILocatorService.idl  liblocator_sdk_version_script.txt
frameworks/native/source/: cached_locations_callback_host.cpp  country_code_callback_host.cpp  country_code_manager.cpp  fence_impl.cpp  gnss_status_callback_host.cpp  locating_required_data_callback_host.cpp  location_data_handler.cpp  location_data_manager.cpp  location_data_rdb_observer.cpp  location_error_callback_host.cpp  location_gnss_geofence_callback_host.cpp  location_switch_callback_host.cpp  location_util.cpp  locator.cpp  locator_callback_host.cpp  locator_impl.cpp  locator_proxy.cpp  locator_proxy.cpp.bak  napi_util.cpp  nmea_message_callback_host.cpp  switch_callback_proxy.cpp
frameworks/native/src/: gnss_status_callback_host.cpp  locator_callback_host.cpp  locator_impl.cpp
interfaces/inner_api/native/: BUILD.gn
location_common/common/: BUILD.gn
location_common/common/include/: constant_definition.h  geo_address.h  geofence_state.h  location.h  location_config_manager.h  location_dumper.h  request_config.h  satellite_status.h
location_common/common/source/: geo_address.cpp  geofence_state.cpp  location.cpp  location_config_manager.cpp  location_dumper.cpp  request_config.cpp  satellite_status.cpp
location_gnss/gnss/: BUILD.gn
location_gnss/gnss/include/: gnss_ability.h  gnss_ability_skeleton.h  gnss_vendor.h
location_gnss/gnss/source/: gnss_ability.cpp  gnss_ability_skeleton.cpp
location_locator/locator/: BUILD.gn
location_locator/locator/include/: fusion_controller.h  geo_convert_proxy.h  gnss_ability_proxy.h  locator_ability.h  locator_background_proxy.h  locator_event_manager.h  locator_event_subscriber.h  locator_skeleton.h  network_ability_proxy.h  passive_ability_proxy.h  report_manager.h  request.h  request_manager.h  subability_common.h  work_record.h
location_locator/locator/source/: fusion_controller.cpp  geo_convert_proxy.cpp  gnss_ability_proxy.cpp  locator_ability.cpp  locator_background_proxy.cpp  locator_event_manager.cpp  locator_event_subscriber.cpp  locator_skeleton.cpp  network_ability_proxy.cpp  passive_ability_proxy.cpp  report_manager.cpp  request.cpp  request_manager.cpp  subability_common.cpp  work_record.cpp
services/location_ui/: BUILD.gn  publicity.xml
services/location_ui/AppScope/: app.json
services/location_ui/signature/: locationdialog.gni  locationdialog.p7b
services/utils/: BUILD.gn
services/utils/inner_api/: i_resources.h
test/fuzztest/: BUILD.gn
test/location_fence/: BUILD.gn
test/location_fence/include/: location_fence_test.h
test/location_fence/source/: location_fence_test.cpp
test/location_geocode/: BUILD.gn
test/location_geocode/include/: geo_convert_service_test.h
test/location_geocode/source/: geo_convert_callback_host_test.cpp  geo_convert_service_test.cpp
test/location_geofence/: BUILD.gn
test/location_geofence/include/: geofence_request_test.h  geofence_sdk_test.h  location_gnss_geofence_callback_host_test.h
test/location_geofence/source/: geofence_request_test.cpp  geofence_sdk_test.cpp  location_gnss_geofence_callback_host_test.cpp
test/location_gnss/: BUILD.gn
test/location_gnss/include/: agnss_ni_manager_test.h  fusion_fence_ability_test.h  fusion_fence_event_callback_test.h  geofence_event_callback_test.h  gnss_ability_stub_test.h  gnss_ability_test.h  gnss_event_callback_test.h  gnss_interface_test.h  ntp_time_test.h  string_utils_test.h
test/location_gnss/source/: agnss_ni_manager_test.cpp  fusion_fence_ability_test.cpp  fusion_fence_event_callback_test.cpp  geofence_event_callback_test.cpp  gnss_ability_stub_test.cpp  gnss_ability_test.cpp  gnss_event_callback_test.cpp  gnss_interface_test.cpp  ntp_time_test.cpp
test/location_locator/: BUILD.gn
test/location_locator/include/: beacon_fence_manager_test.h  callback_proxy_test.h  callback_test.h  country_code_manager_test.h  fusion_controller_test.h  geo_convert_callback_host_test.h  location_approximately_permission_test.h  location_config_manager_test.h  location_without_permission_test.h  locator_agent_test.h  locator_background_proxy_test.h  locator_event_manager_test.h  locator_impl_test.h  locator_msdp_monitor_manager_test.h  test_utils.h  (+7 more)
test/location_manager/: BUILD.gn
test/location_mock_ipc/: BUILD.gn
test/location_network/: BUILD.gn
test/location_passive/: BUILD.gn
tools/ohos-location-manager/: BUILD.gn  config.json  ohos-location-cli_report.md
(+810 files in other folders)
