# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

################################################################################

ohos_shared_library("locator_sdk") {
  install_enable = true

  include_dirs = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//base/location/interfaces/inner_api/include",
    "//base/location/framework/js/napi",
    "//base/location/services/location_common/common/include",
    "//base/location/services/location_locator/callback/include",
    "//base/location/services/utils/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//distributedschedule/safwk/include",
    "//native_engine",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
  ]

  sources = [
    "//base/location/framework/native/src/cached_locations_callback_host.cpp",
    "//base/location/framework/native/src/gnss_status_callback_host.cpp",
    "//base/location/framework/native/src/location_switch_callback_host.cpp",
    "//base/location/framework/native/src/location_util.cpp",
    "//base/location/framework/native/src/locator.cpp",
    "//base/location/framework/native/src/locator_callback_host.cpp",
    "//base/location/framework/native/src/locator_impl.cpp",
    "//base/location/framework/native/src/locator_proxy.cpp",
    "//base/location/framework/native/src/nmea_message_callback_host.cpp",
    "//base/location/services/utils/source/common_utils.cpp",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//base/location/services/location_common/common:lbsservice_common",
    "//foundation/arkui/napi:ace_napi",
    "//third_party/libuv:uv_static",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
  ]

  cflags_cc = [
    "-std=c++17",
    "-fno-rtti",
  ]

  ldflags = [
    "-fPIC",
    "-Wl,-E",
  ]

  part_name = "location"
  subsystem_name = "location"
}
