# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/location/config.gni")
import("//build/ohos.gni")

config("lbs_base_module_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$LOCATION_ROOT_DIR/interfaces/inner_api/native/include",
    "$LOCATION_ROOT_DIR/interfaces/inner_api/include",
  ]
}

ohos_shared_library("lbsbase_module") {
  public_configs = [ ":lbs_base_module_config" ]

  sources = [
    "$LOCATION_ROOT_DIR/frameworks/base_module/source/location.cpp",
    "$LOCATION_ROOT_DIR/frameworks/base_module/source/location_sa_load_manager.cpp",
    "$LOCATION_ROOT_DIR/frameworks/base_module/source/request_config.cpp",
    "$LOCATION_ROOT_DIR/frameworks/base_module/source/satellite_status.cpp",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  deps = []

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  ldflags = [
    "-Wl,--as-needed",
    "-Wl,--gc-sections",
  ]

  cflags_cc = [
    "-ffunction-sections",
    "-fdata-sections",
  ]

  defines = []

  if (startup_init) {
    external_deps += [ "init:libbegetutil" ]
    defines += [ "INIT_SUPPORT" ]
  }

  part_name = "location"
  subsystem_name = "location"
}
