# Copyright (C) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/location/config.gni")
import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

config("location_ani_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$LOCATION_ROOT_DIR/frameworks/location_ani/include",
    "$LOCATION_ROOT_DIR/interfaces/inner_api/include",
  ]
}

group("location_ani_package") {
  deps = [ ":location_ani" ]
}

ohos_shared_library("location_ani") {
  public_configs = [ ":location_ani_config" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  external_deps = [ "runtime_core:ani" ]
  sources = [
    "./src/ani_constructor.cpp",
    "./src/locator_callback_ani.cpp",
  ]

  deps = [
    "$LOCATION_COMMON_DIR:lbsservice_common",
    "$LOCATION_ROOT_DIR/frameworks/base_module:lbsbase_module",
    "$LOCATION_ROOT_DIR/frameworks/native/locator_sdk:locator_sdk",
  ]

  part_name = "location"
  subsystem_name = "location"
  output_extension = "so"
}

generate_static_abc("geoLocationManager_abc") {
  base_url = "./ets"
  files = [ "./ets/@ohos.geoLocationManager.ets" ]
  dst_file = "$target_out_dir/@ohos.geoLocationManager.abc"
  out_puts = [ "$target_out_dir/@ohos.geoLocationManager.abc" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/@ohos.geoLocationManager.abc"
}

ohos_prebuilt_etc("geoLocationManager_etc") {
  source = "$target_out_dir/@ohos.geoLocationManager.abc"
  module_install_dir = "framework"
  part_name = "location"
  subsystem_name = "location"
  deps = [ ":geoLocationManager_abc" ]
}
