# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

################################################################################

config("locator_sdk_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//base/location/interfaces/inner_api/include",
    "//base/location/frameworks/js/napi/include",
  ]
}

ohos_shared_library("locator_sdk") {
  install_enable = true

  public_configs = [ ":locator_sdk_config" ]

  sources = [
    "//base/location/frameworks/native/source/cached_locations_callback_host.cpp",
    "//base/location/frameworks/native/source/country_code_callback_host.cpp",
    "//base/location/frameworks/native/source/gnss_status_callback_host.cpp",
    "//base/location/frameworks/native/source/location_switch_callback_host.cpp",
    "//base/location/frameworks/native/source/locator.cpp",
    "//base/location/frameworks/native/source/locator_callback_host.cpp",
    "//base/location/frameworks/native/source/locator_impl.cpp",
    "//base/location/frameworks/native/source/locator_proxy.cpp",
    "//base/location/frameworks/native/source/napi_util.cpp",
    "//base/location/frameworks/native/source/nmea_message_callback_host.cpp",
  ]

  deps = [
    "//base/location/frameworks/location_common/common:lbsservice_common",
    "//third_party/libuv:uv",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  cflags_cc = [
    "-std=c++17",
    "-fno-rtti",
  ]

  ldflags = [
    "-fPIC",
    "-Wl,-E",
  ]

  part_name = "location"
  subsystem_name = "location"
}
