# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/location/config.gni")
import("//build/ohos.gni")

################################################################################

config("locator_sdk_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$LOCATION_ROOT_DIR/interfaces/inner_api/include",
    "$LOCATION_ROOT_DIR/frameworks/js/napi/include",
  ]
}

ohos_shared_library("locator_sdk") {
  install_enable = true

  public_configs = [ ":locator_sdk_config" ]

  sources = [
    "$LOCATION_NATIVE_DIR/source/cached_locations_callback_host.cpp",
    "$LOCATION_NATIVE_DIR/source/country_code_callback_host.cpp",
    "$LOCATION_NATIVE_DIR/source/country_code_manager.cpp",
    "$LOCATION_NATIVE_DIR/source/gnss_status_callback_host.cpp",
    "$LOCATION_NATIVE_DIR/source/location_data_handler.cpp",
    "$LOCATION_NATIVE_DIR/source/location_data_manager.cpp",
    "$LOCATION_NATIVE_DIR/source/location_data_rdb_observer.cpp",
    "$LOCATION_NATIVE_DIR/source/location_switch_callback_host.cpp",
    "$LOCATION_NATIVE_DIR/source/locator.cpp",
    "$LOCATION_NATIVE_DIR/source/locator_callback_host.cpp",
    "$LOCATION_NATIVE_DIR/source/locator_impl.cpp",
    "$LOCATION_NATIVE_DIR/source/locator_proxy.cpp",
    "$LOCATION_NATIVE_DIR/source/napi_util.cpp",
    "$LOCATION_NATIVE_DIR/source/nmea_message_callback_host.cpp",
    "$LOCATION_NATIVE_DIR/source/switch_callback_proxy.cpp",
  ]

  deps = [
    "$LOCATION_COMMON_DIR:lbsservice_common",
    "//third_party/libuv:uv",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:data_ability_helper",
    "ability_runtime:dataobs_manager",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "cellular_data:tel_cellular_data_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "i18n:intl_util",
    "init:libbeget_proxy",
    "ipc:ipc_core",
    "napi:ace_napi",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [
    "-std=c++17",
    "-fno-rtti",
  ]

  ldflags = [
    "-fPIC",
    "-Wl,-E",
  ]

  innerapi_tags = [ "platformsdk" ]
  part_name = "location"
  subsystem_name = "location"
}
