# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//base/location"
LOCATION_COMMON_ROOT = "$SUBSYSTEM_DIR/location_common/common"
LOCATION_SERVICE_ROOT = "$SUBSYSTEM_DIR/services"

ohos_shared_library("lbsservice_common") {
  sources = [
    "$LOCATION_COMMON_ROOT/source/location.cpp",
    "$LOCATION_COMMON_ROOT/source/request_config.cpp",
    "$LOCATION_COMMON_ROOT/source/geo_address.cpp",
    "$LOCATION_COMMON_ROOT/source/location_config_manager.cpp",
    "$LOCATION_COMMON_ROOT/source/satellite_status.cpp",
    "$LOCATION_COMMON_ROOT/source/geofence_state.cpp",
    "$LOCATION_COMMON_ROOT/source/location_dumper.cpp",
    "$SUBSYSTEM_DIR/utils/source/common_utils.cpp",
  ]

  include_dirs = [
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "$SUBSYSTEM_DIR/location_locator/callback/include",
    "$SUBSYSTEM_DIR/location_common/common/include",
    "$SUBSYSTEM_DIR/location_locator/distribute/include",
    "$SUBSYSTEM_DIR/location_geocode/geocode/include",
    "$SUBSYSTEM_DIR/location_gnss/gnss/include",
    "$SUBSYSTEM_DIR/location_locator/locator/include",
    "$SUBSYSTEM_DIR/location_network/network/include",
    "$SUBSYSTEM_DIR/location_passive/passive/include",
    "$LOCATION_SERVICE_ROOT/visibility/include",
    "$SUBSYSTEM_DIR/utils/include",
    "$SUBSYSTEM_DIR/adapter/services/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
  ]

  deps = [
    "//utils/native/base:utils",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "hisysevent_native:libhisysevent",
    "access_token:libaccesstoken_sdk",
    "startup_l2:syspara",
    "ability_base:want",
    "ability_runtime:wantagent_innerkits",
  ]

  part_name = "location_common"
  subsystem_name = "location"
}
