# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/appexecfwk/standard/appexecfwk.gni")

SUBSYSTEM_DIR = "//base/location"
LOCATION_GNSS_ROOT = "$SUBSYSTEM_DIR/location_gnss/gnss"
LOCATION_SERVICE_ROOT = "$SUBSYSTEM_DIR/services"

ohos_shared_library("lbsservice_gnss") {
  sources = [
    "$LOCATION_GNSS_ROOT/source/gnss_ability.cpp",
    "$LOCATION_GNSS_ROOT/source/gnss_ability_skeleton.cpp",
  ]

  include_dirs = [
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "$SUBSYSTEM_DIR/interfaces/innerkits/locator_standard/include",
    "$SUBSYSTEM_DIR/location_locator/callback/include",
    "$SUBSYSTEM_DIR/location_common/common/include",
    "$SUBSYSTEM_DIR/location_locator/distribute/include",
    "$SUBSYSTEM_DIR/location_geocode/geocode/include",
    "$SUBSYSTEM_DIR/location_gnss/gnss/include",
    "$SUBSYSTEM_DIR/location_locator/locator/include",
    "$SUBSYSTEM_DIR/location_network/network/include",
    "$SUBSYSTEM_DIR/location_passive/passive/include",
    "$LOCATION_SERVICE_ROOT/visibility/include",
    "$SUBSYSTEM_DIR/utils/include",
    "$SUBSYSTEM_DIR/adapter/services/include",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk/",
    "${aafwk_path}/interfaces/innerkits/want/include",
    "${aafwk_path}/interfaces/innerkits/want/include/ohos/aafwk/content",
    "//foundation/aafwk/intent/interfaces/innerkits/base/include",
    "//foundation/appexecfwk/adapter/interfaces/innerkits/appexecfwk_base/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/aafwk/standard/interfaces/innerkits/base/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include",
    "//base/notification/ces_standard/frameworks/core/include",
  ]

  deps = [
    "$SUBSYSTEM_DIR/location_common/common:lbsservice_common",
    "$SUBSYSTEM_DIR/location_locator/locator:lbsservice_locator",
    "//base/location/interfaces/innerkits/locator_standard:locator_sdk",
    "${aafwk_path}/interfaces/innerkits/base:base",
    "${aafwk_path}/interfaces/innerkits/want:want",
    "//utils/native/base:utils",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//base/notification/ces_standard/frameworks/core:cesfwk_core",
    "//base/notification/ces_standard/frameworks/native:cesfwk_innerkits",
  ]

  external_deps = [
    "ces_standard:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "hisysevent_native:libhisysevent",
  ]

  part_name = "location_gnss"
  subsystem_name = "location"
}
