# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/location/config.gni")
import("//build/ohos.gni")
import("./signature/locationdialog.gni")

ohos_hap("location_dialog_hap") {
  if (location_feature_with_opp_switch == true) {
    hap_profile = "entry/src/main/module.json"
  } else {
    hap_profile = "entry/src/main/pc/module.json"
  }

  deps = [
    ":location_dialog_js_assets",
    ":location_dialog_resources",
  ]

  publicity_file = "publicity.xml"
  certificate_profile = "signature/locationdialog.p7b"
  hap_name = "LocationDialog"
  subsystem_name = "location"
  part_name = "location"
  module_install_dir = "app/LocationDialog"
  if (defined(sign_hap_py_path)) {
    certificate_profile = "${certificate_profile_path}"
    key_alias = "LocationDialog Release"
    private_key_path = "LocationDialog Release"
    compatible_version = "10"
  }
}

ohos_js_assets("location_dialog_js_assets") {
  if (location_feature_with_opp_switch == true) {
    hap_profile = "entry/src/main/module.json"
  } else {
    hap_profile = "entry/src/main/pc/module.json"
  }
  ets2abc = true
  source_dir = "entry/src/main/ets"
}

ohos_app_scope("location_dialog_app_profile") {
  app_profile = "AppScope/app.json"
  sources = [ "AppScope/resources" ]
}

ohos_resources("location_dialog_resources") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":location_dialog_app_profile" ]
  if (location_feature_with_opp_switch == true) {
    hap_profile = "entry/src/main/module.json"
  } else {
    hap_profile = "entry/src/main/pc/module.json"
  }
}

group("dialog_hap") {
  deps = [ ":location_dialog_hap" ]
}
