# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/location/config.gni")
import("//build/test.gni")
group("fuzztest") {
  testonly = true
  deps = [
    "locator/countrycodemanager_fuzzer:CountryCodeManagerFuzzTest",
    "locator/fusioncontroller_fuzzer:FusionControllerFuzzTest",
    "locator/geoconvertproxy_fuzzer:GeoConvertProxyFuzzTest",
    "locator/gnss_fuzzer:GnssFuzzTest",
    "locator/locationconfigmanager_fuzzer:LocationConfigManagerFuzzTest",
    "locator/locator_fuzzer:LocatorFuzzTest",
    "locator/locatorbackgroundproxy_fuzzer:LocatorBackgroundProxyFuzzTest",
    "locator/locatoreventmanager_fuzzer:LocatorEventManagerFuzzTest",
    "locator/reportmanager_fuzzer:ReportManagerFuzzTest",
    "locator/requestmanager_fuzzer:RequestManagerFuzzTest",
  ]
}
